<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#FFFFFF"
        android:textAlignment="viewEnd"
        android:textSize="30sp"
        tools:text="123" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_7"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_4"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_0"
                android:textSize="30sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_8"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_5"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_C"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_9"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_6"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_3"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_dot"
                android:textSize="30sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_div"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_mult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_mult"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_add"
                android:textSize="30sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_change"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_sub"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_result"
                android:textSize="30sp" />


        </LinearLayout>


    </LinearLayout>

    <!--<Button-->
        <!--android:id="@+id/button"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Button" />-->


</LinearLayout>
